# egFWD-Payment-Application-Project

./: Accounts DB.txt  CMakeLists.txt  README.md  STD_Types.h  main.c
Application/: application.c  application.h
Card/: card.c  card.h  test.c
Server/: db.c  db.h  server.c  server.h  serverTest.c
Terminal/: terminal.c  terminal.h  testTerminal.c
